defaul user seeding

--- a/eSchool.Web/appsettings.json
+++ b/eSchool.Web/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-D493B0R\\SQLEXPRESS;Database=eSchoolDb;Integrated Security=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=eSchool.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
