--- a/eSchool.Utilities/eSchool.Utilities.csproj
+++ b/eSchool.Utilities/eSchool.Utilities.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.9" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="6.0.9" />
     </ItemGroup>
 
