Services added on program.cs

--- a/eSchool.Web/eSchool.Web.csproj
+++ b/eSchool.Web/eSchool.Web.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\eSchool.Repository\eSchool.Repository.csproj" />
+      <ProjectReference Include="..\eSchool.Utilities\eSchool.Utilities.csproj" />
     </ItemGroup>
 
 </Project>
