--- a/eSchool.Web/eSchool.Web.csproj
+++ b/eSchool.Web/eSchool.Web.csproj
@@ -22,4 +22,15 @@
       <ProjectReference Include="..\eSchool.Utilities\eSchool.Utilities.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Areas\Admin\Controllers" />
+      <Folder Include="Areas\Admin\Views" />
+      <Folder Include="Areas\Employee\Controllers" />
+      <Folder Include="Areas\Employee\Views" />
+      <Folder Include="Areas\Student\Controllers" />
+      <Folder Include="Areas\Student\Views" />
+      <Folder Include="Areas\Teacher\Controllers" />
+      <Folder Include="Areas\Teacher\Views" />
+    </ItemGroup>
+
 </Project>
