initial migration done

--- a/eSchool.Web/appsettings.json
+++ b/eSchool.Web/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-D493B0R\\SQLEXPRESS;Database=eSchoolDb;Integrated Security=true",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=eSchool.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-D493B0R\\SQLEXPRESS;Database=eSchoolDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
