--- a/eSchool.Web/appsettings.json
+++ b/eSchool.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-D493B0R\\SQLEXPRESS;Database=eSchool;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-D493B0R\\SQLEXPRESS;Database=eSchoolDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
